# Open-Sora-Plan

./: pyproject.toml
